build initial helper set from spacing variables

--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" type="text/css" href="../build/test.css">
   </head>
   <body>
-    <h1 class="main-heading">UI Demo Page for Ticketfly CSS Spacing Utilities</h1>
+    <h1 class="main-heading">Ticketfly CSS Spacing Utilities</h1>
   </body>
 </html>
